--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -1,19 +1,20 @@
 .postCard {
-  text-decoration: none;
-  max-width: 50rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  max-width: 50rem;
+  text-decoration: none;
 }
 
 .h3Title {
-  font-size: 3rem;
+  font-size: 2.8rem;
 }
 
 .time {
   color: var(--gray-color);
 }
 
-.postCard:hover, .postCard:hover .time {
-  color: rgb(234, 250, 0);
+.postCard:hover,
+.postCard:hover .time {
+  color: #f7df1c;
 }
