--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,22 @@
 :root {
   --background-color: hsl(0, 0%, 0%);
   --color: hsl(0, 0%, 100%);
-  --gray-color: hsla(0, 0%, 100%, .5);
+  --gray-color:#a4adb6;
+}
+
+::-webkit-scrollbar {
+  width: 1.6rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--gray-color);
+  border-radius: 1rem;
+  border: .4rem solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #c7c7c799;
 }
 
 ::selection {
@@ -9,7 +24,7 @@
   color: var(--background-color);
 }
 
-.radial_gradient_background {
+.radialGradientBackground {
   position: fixed;
   left: 0;
   z-index: -1;
@@ -18,13 +33,13 @@
   background-image: radial-gradient(farthest-side at 50% 50%, #2a2a2a, transparent);
 }
 
-.body_container{
+.bodyContainer{
   max-width: 160rem;
   margin-inline: auto;
-  padding-inline: 3rem;
+  padding-inline: 2rem;
 }
 
-.main_container{
+.mainContainer{
   max-width: 120rem;
   margin-inline: auto;
 }
