--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -23,6 +23,8 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: var(--background-color);
   color: var(--color);
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 svg,
