--- a/src/app/(home)/page.module.css
+++ b/src/app/(home)/page.module.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1.5rem;
-  margin-bottom: 5rem;
+  margin-block: 5rem;
 }
 
 .headerTitle {
@@ -13,10 +13,7 @@
 
 .latestPost {
   display: flex;
-  flex-wrap: wrap;
-  gap: 3rem;
   justify-content: space-between;
-  margin-bottom: 5rem;
 }
 
 .h2Title {
@@ -36,11 +33,20 @@
 }
 
 .posts {
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 
-.postsGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-  gap: 5rem;
+@media screen and (max-width: 769px) {
+  .latestPost {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .imageDecoration {
+    align-self: center;
+  }
+
+  .searchBar {
+    max-width: 100%;
+  }
 }
