--- a/src/components/CustomSearchBar/SearchBar.module.css
+++ b/src/components/CustomSearchBar/SearchBar.module.css
@@ -1,15 +1,26 @@
 .searchBarContainer {
   position: relative;
-  flex-basis: 43rem;
+  max-width: 45rem;
+  width: 100%;
 }
 
 .searchBar {
-  padding: 1rem 2rem 1rem 5.4rem;
+  padding: 1rem 2rem;
+  padding-left: 5.4rem;
   width: 100%;
   background-color: transparent;
   border-radius: 2rem;
   border: .1rem solid var(--gray-color);
-  transition: border-color 250ms ease;
+  transition: border-color 200ms ease;
+}
+
+.searchBar::placeholder {
+  color: var(--gray-color);
+}
+
+.searchBar:focus {
+  outline: none;
+  border-color: var(--color);
 }
 
 .searchIcon {
@@ -20,13 +31,4 @@
 
 .searchIcon g {
   stroke: var(--gray-color);
-}
-
-.searchBar::placeholder {
-  color: var(--gray-color);
-}
-
-.searchBar:focus {
-  outline: none;
-  border-color: var(--color);
 }
