--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -1,9 +1,10 @@
 .postCard {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
   max-width: 50rem;
   text-decoration: none;
+  transition: color 200ms ease-in-out;
 }
 
 .h3Title {
@@ -12,6 +13,7 @@
 
 .time {
   color: var(--gray-color);
+  transition: color 200ms ease-in-out;
 }
 
 .postCard:hover,
