Table of content styles, saving code...

--- a/src/app/(blog)/[slug]/page.module.css
+++ b/src/app/(blog)/[slug]/page.module.css
@@ -5,12 +5,12 @@
   margin-left: -50vw;
   padding-block: 3rem;
   width: 100vw;
-  background-color: var(--color);
+  background-color: hsl(200, 46%, 95%);
   color: var(--background-color);
 }
 
 .spacer {
-  height: 7rem;
+  height: 6rem;
 }
 
 .title::selection {
@@ -20,23 +20,32 @@
 
 .contentContainer {
   display: flex;
-  gap: 2rem;
+  gap: 5rem;
   justify-content: space-between;
+  margin-block: 5rem;
 }
 
-.content {}
+.content {
+  flex: 1;
+  max-width: 81rem;
+}
+
+.asideContainer {
+  flex-basis: 25rem;
+}
 
 .tableOfContents {
-  flex-basis: 25rem;
+  position: sticky;
+  top: 5rem;
 }
 
 @media screen and (max-width: 1200px) {
   .contentContainer {
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
   }
 
-  .tableOfContents {
+  .asideContainer {
     display: none;
   }
 }
