--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background-color: hsl(0, 0%, 0%);
   --color: hsl(0, 0%, 100%);
-  --gray-color: hsl(0, 0%, 58%);
+  --gray-color: hsl(227, 8%, 58%);
 }
 
 ::-webkit-scrollbar {
@@ -30,11 +30,19 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: radial-gradient(farthest-side at 50% 50%, #2a2a2a, transparent);
+  background-image: radial-gradient(farthest-side at 50% 50%, hsl(0, 0%, 16%), transparent);
 }
 
 .container {
   max-width: 120rem;
   margin-inline: auto;
   padding-inline: 2rem;
+}
+
+.hideElement{
+  height: .1rem;
+  overflow: hidden;
+  user-select: none;
+  pointer-events: none;
+  visibility: hidden;
 }
