--- a/src/app/(blog)/[slug]/page.module.css
+++ b/src/app/(blog)/[slug]/page.module.css
@@ -5,7 +5,7 @@
   margin-left: -50vw;
   padding-block: 3rem;
   width: 100vw;
-  background-color: hsl(200, 46%, 95%);
+  background-color: var(--color);
   color: var(--background-color);
 }
 
@@ -21,13 +21,12 @@
 .contentContainer {
   display: flex;
   gap: 5rem;
-  justify-content: space-between;
   margin-block: 5rem;
 }
 
 .content {
-  flex: 1;
-  max-width: 81rem;
+  width: 100%;
+  max-width: 70rem;
 }
 
 .asideContainer {
@@ -39,7 +38,7 @@
   top: 5rem;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1000px) {
   .contentContainer {
     flex-direction: column;
     align-items: center;
