--- a/src/components/PostList/PostList.module.css
+++ b/src/components/PostList/PostList.module.css
@@ -1,5 +1,6 @@
 .postsGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   gap: 5rem;
 }
