--- a/src/components/TableOfContents/TableOfContents.module.css
+++ b/src/components/TableOfContents/TableOfContents.module.css
@@ -1,25 +1,29 @@
 .title {
-  font-size: 2.2rem;
-  color: hsl(0, 0%, 85%);
+  margin-bottom: 1.5rem;
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  letter-spacing: .2rem;
+  color: #e9e5e5;
 }
 
 .nav ul {
   padding-left: 0;
+  font-size: 1.6rem;
 }
 
 .nav ul ul {
   padding-left: 1rem;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
 }
 
 .nav li {
-  margin-top: .5rem;
+  margin-top: .8rem;
   list-style: none;
 }
 
 .link {
   text-decoration: none;
-  color: hsl(0, 1%, 70%);
+  color: #b8b4b4;
   transition: color 250ms ease-in-out;
 }
 
