--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -7,8 +7,8 @@
   transition: color 200ms ease-in-out;
 }
 
-.h3Title {
-  font-size: 2.8rem;
+.title {
+  font-size: 2.6rem;
 }
 
 .time {
@@ -18,5 +18,5 @@
 
 .postCard:hover,
 .postCard:hover .time {
-  color: hsl(53, 93%, 54%);
+  color: var(--pink-color);
 }
