--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,14 @@
 :root {
-  --background-color: #121212;
-  --color: #fafbfc;
+  --background-color: hsl(0, 0%, 7%);
+  --color: hsl(210, 25%, 98%);
   --gray-color: hsl(227, 8%, 58%);
+  --yellow-color: hsl(60, 100%, 50%);
+  --pink-color: hsl(350, 100%, 88%);
+  --blue-color: hsl(215, 100%, 67%);
+  --title-gradient: linear-gradient(270deg, hsl(338, 67%, 40%) 0%,
+      hsl(349, 55%, 54%) 25.38%,
+      hsl(6, 84%, 70%) 63.27%,
+      hsl(4, 88%, 66%) 100%);
 }
 
 ::-webkit-scrollbar {
@@ -16,7 +23,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #c7c7c799;
+  background-color: hsla(0, 0%, 78%, 0.6);
 }
 
 ::selection {
@@ -30,7 +37,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: radial-gradient(farthest-side at 50% 50%, hsl(0, 0%, 15%), transparent);
+  background-image: radial-gradient(farthest-side at 50% 50%, hsl(0, 0%, 17%), transparent);
 }
 
 .container {
@@ -39,7 +46,13 @@
   padding-inline: 2rem;
 }
 
-.hideElement{
+@media screen and (max-width: 769px) {
+  .container {
+    padding-inline: 1.5rem;
+  }
+}
+
+.hideElement {
   margin: 0;
   padding: 0;
   height: .1rem;
@@ -47,4 +60,13 @@
   overflow: hidden;
   user-select: none;
   pointer-events: none;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--blue-color);
+}
+
+.link:hover {
+  text-decoration: underline;
 }
