--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-size: clamp(1.6rem, 4vw, 1.8rem);
+  font-size: 1.8rem;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   background-color: var(--background-color);
