--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,21 +1,9 @@
 .footer {
   display: flex;
-  justify-content: space-between;
+  gap: 3rem;
+  flex-wrap: wrap;
   align-items: center;
   padding-block: 3rem;
-}
-
-@media screen and (max-width: 500px) {
-  .footer {
-    gap: 2rem;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.linksContainer {
-  display: flex;
-  gap: 1.5rem;
 }
 
 .link {
