--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -7,21 +7,24 @@ article h3 {
   position: relative;
   margin-top: 4rem;
   margin-bottom: 2rem;
+  color: var(--pink-color);
 }
 
-article h2 a::before,
-article h3 a::before {
-  content: '🔗';
-  position: absolute;
-  left: -4rem;
-  display: inline-block;
-  opacity: 0;
-  transition: opacity 250ms ease;
-}
+@media screen and (min-width: 769px) {
+  article h2 a::before,
+  article h3 a::before {
+    content: '🔗';
+    position: absolute;
+    left: -4rem;
+    display: inline-block;
+    opacity: 0;
+    transition: opacity 250ms ease;
+  }
 
-article h2:hover a::before,
-article h3:hover a::before {
-  opacity: 1;
+  article h2:hover a::before,
+  article h3:hover a::before {
+    opacity: 1;
+  }
 }
 
 article a {
@@ -40,7 +43,7 @@ article pre {
 article ul {
   list-style-position: inside;
   list-style-type: disc;
-  padding-left: var(--gap);
+  padding-left: 1.5rem;
 }
 
 article ul ul {
